WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238234
REGRESSION (
248499@main
): [iOS] ASSERTION FAILED: Completion handler should always be called under WebKit::NetworkProcess::prepareToSuspend()
https://bugs.webkit.org/show_bug.cgi?id=238234
Summary
REGRESSION (248499@main): [iOS] ASSERTION FAILED: Completion handler should a...
Ryan Haddad
Reported
2022-03-22 16:10:03 PDT
Created
attachment 455447
[details]
crash log Layout tests are exiting early on iOS debug bots with crashes, all appear to be the following assert: ASSERTION FAILED: Completion handler should always be called !m_function /Volumes/Data/worker/ios-simulator-15-debug/build/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/CompletionHandler.h(59) : WTF::CompletionHandler<void ()>::~CompletionHandler() 1 0x119499169 WTFCrash 2 0x127b10da7 WTF::CompletionHandler<void ()>::~CompletionHandler() 3 0x127b0f275 WTF::CompletionHandler<void ()>::~CompletionHandler() 4 0x1289e0ca9 auto WebKit::NetworkProcess::prepareToSuspend(bool, WTF::CompletionHandler<void ()>&&)::$_63::operator()<WebKit::NetworkSession>(WebKit::NetworkSession&) const 5 0x1289e0b31 WTF::Detail::CallableWrapper<WebKit::NetworkProcess::prepareToSuspend(bool, WTF::CompletionHandler<void ()>&&)::$_63, void, WebKit::NetworkSession&>::call(WebKit::NetworkSession&) 6 0x12895e307 WTF::Function<void (WebKit::NetworkSession&)>::operator()(WebKit::NetworkSession&) const 7 0x12895be59 WebKit::NetworkProcess::forEachNetworkSession(WTF::Function<void (WebKit::NetworkSession&)> const&) 8 0x1289685ad WebKit::NetworkProcess::prepareToSuspend(bool, WTF::CompletionHandler<void ()>&&) 9 0x127de3852 void IPC::callMemberFunctionImpl<WebKit::NetworkProcess, void (WebKit::NetworkProcess::*)(bool, WTF::CompletionHandler<void ()>&&), void (), std::__1::tuple<bool>, 0ul>(WebKit::NetworkProcess*, void (WebKit::NetworkProcess::*)(bool, WTF::CompletionHandler<void ()>&&), WTF::CompletionHandler<void ()>&&, std::__1::tuple<bool>&&, std::__1::integer_sequence<unsigned long, 0ul>) 10 0x127de2de2 void IPC::callMemberFunction<WebKit::NetworkProcess, void (WebKit::NetworkProcess::*)(bool, WTF::CompletionHandler<void ()>&&), void (), std::__1::tuple<bool>, std::__1::integer_sequence<unsigned long, 0ul> >(std::__1::tuple<bool>&&, WTF::CompletionHandler<void ()>&&, WebKit::NetworkProcess*, void (WebKit::NetworkProcess::*)(bool, WTF::CompletionHandler<void ()>&&)) 11 0x127d828d9 void IPC::handleMessageAsync<Messages::NetworkProcess::PrepareToSuspend, WebKit::NetworkProcess, void (WebKit::NetworkProcess::*)(bool, WTF::CompletionHandler<void ()>&&)>(IPC::Connection&, IPC::Decoder&, WebKit::NetworkProcess*, void (WebKit::NetworkProcess::*)(bool, WTF::CompletionHandler<void ()>&&)) 12 0x127d7d8a5 WebKit::NetworkProcess::didReceiveNetworkProcessMessage(IPC::Connection&, IPC::Decoder&) 13 0x12895baae WebKit::NetworkProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&)
https://build.webkit.org/results/Apple-iOS-15-Simulator-Debug-WK2-Tests/r291624%20(2030)/results.html
Attachments
crash log
(127.64 KB, text/plain)
2022-03-22 16:10 PDT
,
Ryan Haddad
no flags
Details
Patch
(1.58 KB, patch)
2022-03-22 16:27 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2022-03-22 16:10:59 PDT
This started between
248494@main
and
248504@main
, so
https://commits.webkit.org/248499@main
seems to be the most likely candidate for a regression point.
Radar WebKit Bug Importer
Comment 2
2022-03-22 16:11:57 PDT
<
rdar://problem/90665237
>
Sihui Liu
Comment 3
2022-03-22 16:27:41 PDT
Created
attachment 455453
[details]
Patch
EWS
Comment 4
2022-03-22 18:40:31 PDT
Committed
r291732
(
248764@main
): <
https://commits.webkit.org/248764@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455453
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug