REGRESSION (248499@main): [iOS] ASSERTION FAILED: Completion handler should always be called under WebKit::NetworkProcess::prepareToSuspend() https://bugs.webkit.org/show_bug.cgi?id=238234 <rdar://problem/90665237>

Reviewed by Chris Dumez.

Invoke completion handler on early return.

* NetworkProcess/storage/NetworkStorageManager.cpp:
(WebKit::NetworkStorageManager::suspend):



Canonical link: https://commits.webkit.org/248764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291732 268f45cc-cd09-0410-ab3c-d52691b4dbfc